# dtcc-agent

./: .gitignore  .mcp.json  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
chatbot/: __init__.py  __main__.py  app.py  config.py  memory.py  sessions.py
chatbot/static/: index.html
docs/plans/: 2026-02-18-chatbot-design.md  2026-02-18-chatbot-implementation.md  2026-02-21-caching-plan.md  2026-02-21-semantic-query-cache-design.md  2026-02-21-semantic-query-cache-implementation.md
dtcc_agent/: __init__.py  __main__.py  analysis.py  crop.py  disk_cache.py  dispatcher.py  geocode.py  object_store.py  registry.py  renderer.py  runner.py  serializers.py  server.py
tests/: test_analysis.py  test_chatbot_app.py  test_chatbot_config.py  test_chatbot_sessions.py  test_crop.py  test_disk_cache.py  test_dispatcher.py  test_geocode.py  test_object_store.py  test_registry.py  test_serializers.py
