[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtcc-agent"
version = "0.1.0"
description = "LLM agent interface for the DTCC digital twin platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Vasilis Naserentin", email = "vasilis.naserentin@chalmers.se" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "pyproj>=3.6.0",
  "numpy",
  "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
test = ["pytest"]
chatbot = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "claude-agent-sdk>=0.1.0",
    "websockets>=13.0",
    "chromadb>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/dtcc-platform/dtcc-agent"
Source = "https://github.com/dtcc-platform/dtcc-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["dtcc_agent*", "chatbot*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["external: tests that require network access"]
